fixed issue where filter inputs were off screen

--- a/styles/user/dashboard/Manage.module.scss
+++ b/styles/user/dashboard/Manage.module.scss
@@ -127,6 +127,7 @@
     padding: 1rem;
     gap: 1rem;
     align-items: stretch;
+    flex-direction: column;
   }
 }
 
